[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] } # trace feature enables tracing middleware, which integrates with the tracing crate to provide detailed logging and tracing of http requests and responses.
serde ={ version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = "0.16.1"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
argon2 = { version = "0.5.3", features = ["std"] } # argon2 will be used to hash passwords
test_helpers = { git = "https://github.com/vineetpuranik/test_helpers.git"}
redis = { version = "0.32.7", features = ["tokio-comp"] } # Redis library for rust.
tracing = "0.1.41" # core functionality for managing spans and events
# configuration w.r.t how the trace data is collected, processed and exported.
# The registry feature in tracing-subscriber enables us to create a Registry type, which is a Subscriber with multiple Layers. 
# The env-filter feature in tracing-subscriber provides functionality to dynamically filter spans and events based on a set of filter directives.
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] } 
# The tracing-error crate integrates with tracing to provide enhanced error reporting capabilities, allowing errors to be recorded and associated with tracing spans, thereby capturing rich contextual information for diagnostics.
tracing-error = "0.2.0"
thiserror = "1.0.58" # thiserror crate is needed for implementing the Error trait on custom Error types in a concise and user friendly manner
color-eyre = "0.6.3" # color-eyre crate enhances error reporting by generating colorful, formatted error messages. 

[dev-dependencies]
reqwest = {version = "0.11.26", default-features = false, features = ["json", "cookies"]}
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
